--- a/js1/day5_ES6/面试题.md
+++ b/js1/day5_ES6/面试题.md
@@ -1,109 +1,121 @@
-一、为什么 模板字符串（Template Literal） 比传统字符串拼接更好？
+# 为什么 模板字符串（Template Literal） 比传统字符串拼接更好？
 
 1️⃣ 可读性：少符号 = 少心智负担
 
 ❌ 传统拼接
 
-const msg = '用户 ' + name + ' 在 ' + time + ' 登录，IP：' + ip;
+```js
+const msg = "用户 " + name + " 在 " + time + " 登录，IP：" + ip;
+```
 
 ✅ 模板字符串
 
+```js
 const msg = `用户 ${name} 在 ${time} 登录，IP：${ip}`;
+```
 
 📌 核心优势
-	•	不用数 +
-	•	不用关心空格、引号
-	•	所见即所得（接近自然语言）
 
+- 不用数 +
+- 不用关心空格、引号
+- 所见即所得（接近自然语言）
 
-⸻
+---
 
 2️⃣ 天然支持 多行字符串
 
 ❌ 传统方式
+
+```js
 const html =
-  '<div>' +
-  '  <span>' + name + '</span>' +
-  '</div>';
+```
+
+'<div>' +
+' <span>' + name + '</span>' +
+'</div>';
 
 ✅ 模板字符串
 
-  const html = `
+```js
+const html = `
+
+```
+
   <div>
     <span>${name}</span>
   </div>
 `;
 
 📌 真实场景
-	•	HTML 模板
-	•	SQL 语句
-	•	日志格式
-	•	markdown
 
-👉 面试话术
+- HTML 模板
+- SQL 语句
+- 日志格式
+- markdown
+- 面试话术
 
-模板字符串对多行文本天然友好，更适合写模板和结构化内容。
-
-
-⸻
+## 模板字符串对多行文本天然友好，更适合写模板和结构化内容。
 
 3️⃣ 内置表达式能力（不仅是变量）
+
+```js
 const priceText = `总价：${count * price} 元`;
+```
 
 📌 传统方式要：
-'总价：' + (count * price) + ' 元'
+'总价：' + (count \* price) + ' 元'
 
- 面试话术
+面试话术
 
-模板字符串支持任意 JS 表达式，避免额外的拼接与括号。
-
-⸻
+## 模板字符串支持任意 JS 表达式，避免额外的拼接与括号。
 
 4️⃣ 标签模板（高级但加分）
 
 tag`Hello ${name}`
 
-👉 可用于：
-	•	XSS 防护
-	•	i18n
-	•	样式系统（styled-components）
+- 可用于：
+- XSS 防护
+- i18n
+- 样式系统（styled-components）
 
 📌 面试只要一句话：
 
-模板字符串支持标签函数，是构建 DSL 和模板引擎的基础。
-
-⸻
+## 模板字符串支持标签函数，是构建 DSL 和模板引擎的基础。
 
 ✅ 总结一句话（必背）
 
-模板字符串在可读性、多行支持、表达式能力和扩展性上全面优于传统字符串拼接。
+## 模板字符串在可读性、多行支持、表达式能力和扩展性上全面优于传统字符串拼接。
 
-⸻
-
-
-二、解构赋值在「函数参数」里有什么优势？
+## 解构赋值在「函数参数」里有什么优势？
 
 这是工程 + 面试 + React/Vue 源码都会用到的东西。
 
 1️⃣ 提升参数语义：不用记顺序
 
 ❌ 位置参数（可读性差）
+
+```js
 function createUser(name, age, role) {}
+```
+
 createUser('Tom', 18, 'admin');
 
-👉 看调用点根本不知道 18 是啥
+- 看调用点根本不知道 18 是啥
 
 ✅ 解构参数（语义清晰）
 
+```js
 function createUser({ name, age, role }) {}
+```
+
 createUser({ name: 'Tom', age: 18, role: 'admin' });
 
 📌 优势
-	•	参数即文档
-	•	不怕顺序错
-	•	调用更清晰
 
-👉 面试话术
+- 参数即文档
+- 不怕顺序错
+- 调用更清晰
+- 面试话术
 
 解构参数能让函数调用具有自描述性。
 
@@ -111,81 +123,89 @@ createUser({ name: 'Tom', age: 18, role: 'admin' });
 
 ❌ 传统写法
 
+```js
 function request(options) {
-  const timeout = options.timeout || 3000;
-  const method = options.method || 'GET';
+const timeout = options.timeout || 3000;
+const method = options.method || 'GET';
+```
+
 }
 
-❗ 0、'' 会被误判
-
-⸻
+## ❗ 0、'' 会被误判
 
 ✅ 解构 + 默认值
 
-function request({ timeout = 3000, method = 'GET' } = {}) {}
+```js
+function request({ timeout = 3000, method = "GET" } = {}) {}
+```
 
 📌 优势
-	•	默认值只在 undefined 时生效
-	•	一行解决兜底
-	•	防止参数为 undefined 报错
 
-👉 面试话术
+- 默认值只在 undefined 时生效
+- 一行解决兜底
+- 防止参数为 undefined 报错
+- 面试话术
 
-解构默认值比逻辑兜底更安全，也更符合语义。
-
-⸻
+## 解构默认值比逻辑兜底更安全，也更符合语义。
 
 3️⃣ 函数内部不需要再声明变量
 
 ❌
 
+```js
 function fn(options) {
-  const { a, b } = options;
+const { a, b } = options;
+```
+
 }
 
 ✅
+
+```js
 function fn({ a, b }) {}
+```
 
 📌 优势
-	•	少一层中间变量
-	•	代码更扁平
 
-⸻
+- 少一层中间变量
+- 代码更扁平
+
+---
 
 4️⃣ 精确使用你需要的参数（防止滥用）
 
+```js
 function render({ title }) {
-  // 外部传再多字段，也只能用 title
+```
+
+// 外部传再多字段，也只能用 title
 }
 
-👉 好处
-	•	更易维护
-	•	接口边界清晰
+- 好处
+- 更易维护
+- 接口边界清晰
 
-⸻
+---
 
 5️⃣ 在 React / Vue 中是“默认写法”
 
 React
 
+```js
 function Button({ type, disabled, children }) {}
+```
 
 Vue setup
 
 setup({ title, size }) {}
 
-👉 面试话术
+- 面试话术
 
-解构参数是现代组件 API 的事实标准。
+## 解构参数是现代组件 API 的事实标准。
 
-⸻
-
-三、终极面试总结（背这一段）
+## 终极面试总结（背这一段）
 
 模板字符串提升了字符串拼接的可读性和表达能力，天然支持多行与表达式；
 解构赋值在函数参数中让参数更具语义性，避免顺序依赖，并能优雅地处理默认值和配置对象。
 
-⸻
-
-
-
+---
