--- a/js1/day5_ES6/面试题2.md
+++ b/js1/day5_ES6/面试题2.md
@@ -4,20 +4,20 @@
 
 下面代码有没有问题？如果有，问题在哪？
 
+```js
 function createUser({ name, age = 18, isAdmin = false }) {
-  console.log(name, age, isAdmin);
-}
+console.log(name, age, isAdmin);
+```
 
-
-⸻
+## }
 
 ❌ 90% 的回答
 
 “没问题啊，用了解构和默认值”
 
-👉 直接挂
+- 直接挂
 
-⸻
+---
 
 ⚠️ 真正的 Bug（关键）
 
@@ -27,30 +27,36 @@ createUser();
 
 💥 直接报错
 
-TypeError: Cannot destructure property 'name' of 'undefined'
-
-
-⸻
+## TypeError: Cannot destructure property 'name' of 'undefined'
 
 🧠 原因拆解（面试官想听的）
 
 JS 执行顺序是这样的：
 
+```js
 function createUser({ ... }) {}
+
+```
 
 等价于：
 
+```js
 function createUser(param) {
-  const { name, age = 18, isAdmin = false } = param;
+const { name, age = 18, isAdmin = false } = param;
+```
+
 }
 
 ❗ 当 param === undefined 时，解构立即失败
 ❗ 默认值 age = 18 根本来不及执行
 
-
 ✅ 正确写法（标准答案）
+
+```js
 function createUser({ name, age = 18, isAdmin = false } = {}) {
-  console.log(name, age, isAdmin);
+console.log(name, age, isAdmin);
+```
+
 }
 
 再执行
@@ -58,8 +64,7 @@ createUser();
 ✅ 输出：
 undefined 18 false
 
-
-⸻
+---
 
 🎯 面试官真实考点
 
@@ -71,19 +76,22 @@ undefined 18 false
 
 而不是对整个参数兜底。
 
-3️⃣ 你写的函数是否 健壮
-
-⸻
+## 3️⃣ 你写的函数是否 健壮
 
 🔥 进阶隐藏坑（更狠）
 
 ❓ 再看这段代码，有没有坑？
 
+```js
 function fetchData({ timeout = 3000 } = {}) {
-  console.log(timeout);
+console.log(timeout);
+```
+
 }
 
+```js
 fetchData({ timeout: null });
+```
 
 ❌ 很多人会说
 
@@ -94,18 +102,25 @@ fetchData({ timeout: null });
 null
 
 为什么？
-	•	解构默认值 只在 === undefined 时生效
-	•	null 是「明确的值」
 
-👉 这在接口数据中极常见
+- 解构默认值 只在 === undefined 时生效
+- null 是「明确的值」
+- 这在接口数据中极常见
 
-⸻
+---
 
 🧨 再来一个「线上真实事故级」坑
 
+```js
 function request({ retry = 3 } = {}) {
-  retry = retry || 3;
-  console.log(retry);
+```
+
+retry = retry || 3;
+
+```js
+console.log(retry);
+```
+
 }
 
 request({ retry: 0 });
@@ -117,32 +132,33 @@ request({ retry: 0 });
 💥 真实意图
 0
 
-👉 双重兜底 = 自杀式写法
+- 双重兜底 = 自杀式写法
 
 ✅ 正确姿势
 
+```js
 function request({ retry = 3 } = {}) {
-  console.log(retry);
+console.log(retry);
+```
+
 }
 
 或更严谨：
 
+```js
 const finalRetry = retry ?? 3;
+```
 
+---
 
-⸻
+## 🧠 面试官终极追问（杀伤力 MAX）
 
-🧠 面试官终极追问（杀伤力 MAX）
-
-为什么解构参数 + 默认值比 || 更安全？
+## ❓ 为什么解构参数 + 默认值比 || 更安全？
 
 满分回答
 
-因为解构默认值只在参数为 undefined 时触发，而 || 会误判合法的 falsy 值，容易引发线上逻辑错误。
-
-⸻
+## 因为解构默认值只在参数为 undefined 时触发，而 || 会误判合法的 falsy 值，容易引发线上逻辑错误。
 
 📌 一句话封神总结（背）
 
 解构参数的默认值并不会兜底整个参数对象，必须显式给参数一个默认空对象，否则在未传参时会直接抛错。
-
