--- a/js1/day5_ES6/面试题3.md
+++ b/js1/day5_ES6/面试题3.md
@@ -1,30 +1,28 @@
-
-⸻
-
+---
 💣 React props 解构「必炸坑」（真实源码级）
 
 ❓ 题目
 
 下面这个 React 组件有没有问题？
+```js
 function UserCard({ user: { name, age } }) {
-  return (
-    <div>
-      <p>{name}</p>
-      <p>{age}</p>
-    </div>
-  );
+return (
+```
+<div>
+<p>{name}</p>
+<p>{age}</p>
+</div>
+);
 }
-
-
-⸻
+---
 
 ❌ 90% 的回答
 
 “没问题啊，解构 props”
 
-👉 直接挂
+- 直接挂
 
-⸻
+---
 
 💥 真实炸点
 
@@ -40,8 +38,7 @@ function UserCard({ user: { name, age } }) {
 TypeError: Cannot destructure property 'name' of 'undefined'
 TypeError: Cannot destructure property 'name' of 'null'
 
-
-⸻
+---
 
 🧠 原因（面试官想听）
 
@@ -52,106 +49,117 @@ props.user === undefined | null
 而参数解构是同步立即执行的，
 错误发生在函数体执行前，React 根本救不了你。
 
-⸻
+---
 
 ❌ 错误的“看似修复”
 
+```js
 function UserCard({ user = {} }) {
-  const { name, age } = user;
+const { name, age } = user;
+```
+
 }
 
 ⚠️ 仍然有坑
 
 <UserCard user={null} />
 
-❌ null 不会触发默认值
-
-⸻
+## ❌ null 不会触发默认值
 
 ✅ 正确 & 工程级写法（推荐）
 
 ✅ 写法 1：参数兜底 + 可选链（最安全）
 
+```js
 function UserCard({ user } = {}) {
-  const name = user?.name ?? '-';
-  const age = user?.age ?? '-';
+const name = user?.name ?? '-';
+const age = user?.age ?? '-';
 
-  return (
-    <div>
-      <p>{name}</p>
-      <p>{age}</p>
-    </div>
-  );
+return (
+```
+
+<div>
+<p>{name}</p>
+<p>{age}</p>
+</div>
+);
 }
-
-
-⸻
-
+---
 ✅ 写法 2：分层解构（React 官方更推荐）
 
+```js
 function UserCard(props) {
-  const { user } = props || {};
-  const { name, age } = user || {};
+const { user } = props || {};
+const { name, age } = user || {};
 
-  return (
-    <div>
-      <p>{name}</p>
-      <p>{age}</p>
-    </div>
-  );
+return (
+```
+
+<div>
+<p>{name}</p>
+<p>{age}</p>
+</div>
+);
 }
 
-📌 可读性 > 炫技
-
-
-⸻
+## 📌 可读性 > 炫技
 
 🔥 更狠的隐藏坑（高频翻车）
 
 ❓ 再看这个组件，有没有问题？
 
+```js
 function Button({ onClick = () => {} }) {
-  return <button onClick={onClick}>Click</button>;
+return <button onClick={onClick}>Click</button>;
+```
+
 }
 
 ❌ 隐形性能 Bug
-	•	每次 render 都创建一个新函数
-	•	破坏 memo / PureComponent
 
-⸻
+- 每次 render 都创建一个新函数
+- 破坏 memo / PureComponent
+
+---
 
 ✅ 正确写法
+
+```js
 const noop = () => {};
 
 function Button({ onClick = noop }) {
-  return <button onClick={onClick}>Click</button>;
+return <button onClick={onClick}>Click</button>;
+```
+
 }
 
-👉 这是真实 React 源码级写法
+- 这是真实 React 源码级写法
 
-⸻
+---
 
 🧨 再一个 React 源码级坑（children）
 
+```js
 function List({ children }) {
-  return children.map(item => <li>{item}</li>);
+return children.map(item => <li>{item}</li>);
+```
+
 }
 
 💥 炸点
 <List>hello</List>
 ❌ children 可能不是数组
 
-
-⸻
+---
 
 ✅ 正确写法
 
+```js
 function List({ children }) {
-  return React.Children.map(children, item => <li>{item}</li>);
-}
+return React.Children.map(children, item => <li>{item}</li>);
+```
 
-
-⸻
+## }
 
 🎯 面试官真实考点总结
 
@@ -168,19 +176,14 @@ null vs undefined
 children 多态性
 ✅
 
-
 🧠 面试官终极追问（封神）
 
 那为什么 React 官方文档还大量使用 props 解构？
 
 满分回答
 
-因为在可控的组件边界内解构是安全的，但在公共组件或业务组件中必须考虑异常输入，避免在参数阶段做深层解构。
-
-⸻
+## 因为在可控的组件边界内解构是安全的，但在公共组件或业务组件中必须考虑异常输入，避免在参数阶段做深层解构。
 
 📌 一句话封神（背）
 
 在 React 中，props 永远不可信，函数参数阶段的深层解构是潜在的运行时炸弹。
-
-
