--- a/js1/day1_map_forEach/面试题.md
+++ b/js1/day1_map_forEach/面试题.md
@@ -38,12 +38,13 @@ map 的特点：
 - 输入确定 → 输出确定
 - 无副作用
 
-这正是 React / Vue 推崇的声明式 UI 思想
-UI = f(state)
-3️⃣ map 会返回新数组（这是关键）
-渲染需要的是一个结果集合：
-📌 React/Vue 渲染必须“有返回值”
-4️⃣ map + key，完美配合 diff 算法
+| 这正是 React / Vue 推崇的声明式 UI 思想 | UI = f(state) |
+
+
+ 3️⃣ map 会返回新数组（这是关键） 
+ 渲染需要的是一个结果集合： 
+ 📌 React/Vue 渲染必须“有返回值” 
+ 4️⃣ map + key，完美配合 diff 算法 |
 这样：
 
 - 每一项都是独立 VNode
