--- a/js1/day3_reduce/面试题.md
+++ b/js1/day3_reduce/面试题.md
@@ -33,13 +33,11 @@ reduce 是数组的归约函数，它的定义大概是：
 ```js
 const arr = [1, 2, 3, 4];
 let sum = 0;
-```
 
 for (let i = 0; i < arr.length; i++) {
 sum += arr[i];
 }
 
-```js
 console.log(sum); // 10
 ```
 
@@ -58,18 +56,11 @@ console.log(sum); // 10
 
 3️⃣ reduce 的泛用性
 
-reduce 的强大在于它可以做任意“聚合”：
-用途
-for 循环写法
-reduce 写法
-求和
-累加 sum
-arr.reduce((acc, val) => acc + val, 0)
-求最大值
-遍历比大小
-arr.reduce((max, val) => val > max ? val : max, -Infinity)
-数组扁平化
-for 循环 push
+| reduce 的强大在于它可以做任意“聚合”
+| 用途 | for 循环写法 | reduce 写法 |
+| --- | --- | --- | --- |
+| 求和 | 累加 sum | arr.reduce((acc, val) => acc + val, 0) | 求最大值 |
+| 遍历比大小 | arr.reduce((max, val) => val > max ? val : max, -Infinity) | 数组扁平化 | for 循环 push |
 arr.reduce((acc, val) => acc.concat(val), [])
 分组统计
 维护对象计数
