--- a/js1/day4_对象_循环/面试题.md
+++ b/js1/day4_对象_循环/面试题.md
@@ -1,16 +1,11 @@
 Q: 为什么直接赋值对象变量，修改副本也会改变原对象？
 
-1️⃣ 基本概念：值类型 vs 引用类型
-在 JavaScript 中，变量分为两类：
-
-类型
-存储方式
-特点
-基本类型（Number、String、Boolean、null、undefined、Symbol、BigInt）
-栈（stack）
-赋值会复制 值本身，互不影响
-引用类型（Object、Array、Function）
-堆（heap） + 栈存地址
+| 1️⃣ 基本概念：值类型 vs 引用类型 | 在 JavaScript 中，变量分为两类 |
+| --- | --- |
+| 类型 | 存储方式 |
+| 特点 | 基本类型（Number、String、Boolean、null、undefined、Symbol、BigInt） |
+| 栈（stack） | 赋值会复制 值本身，互不影响 |
+| 引用类型（Object、Array、Function） | 堆（heap） + 栈存地址 |
 赋值是复制 引用（地址），修改副本会影响原对象
 
 ---
