--- a/js1/day5_ES6/面试题3.md
+++ b/js1/day5_ES6/面试题3.md
@@ -8,12 +8,10 @@
 function UserCard({ user: { name, age } }) {
 return (
 ```
-<div>
-<p>{name}</p>
-<p>{age}</p>
-</div>
-);
-}
+| <div> | <p>{name}</p> |
+| --- | --- |
+| <p>{age}</p> | </div> |
+| ); | } |
 ---
 
 ❌ 90% 的回答
@@ -78,12 +76,10 @@ const age = user?.age ?? '-';
 return (
 ```
 
-<div>
-<p>{name}</p>
-<p>{age}</p>
-</div>
-);
-}
+| <div> | <p>{name}</p> |
+| --- | --- |
+| <p>{age}</p> | </div> |
+| ); | } |
 ---
 ✅ 写法 2：分层解构（React 官方更推荐）
 
@@ -95,13 +91,10 @@ const { name, age } = user || {};
 return (
 ```
 
-<div>
-<p>{name}</p>
-<p>{age}</p>
-</div>
-);
-}
-
+| <div> | <p>{name}</p> |
+| --- | --- |
+| <p>{age}</p> | </div> |
+| ); | } |
 ## 📌 可读性 > 炫技
 
 🔥 更狠的隐藏坑（高频翻车）
@@ -163,19 +156,10 @@ return React.Children.map(children, item => <li>{item}</li>);
 
 🎯 面试官真实考点总结
 
-考点
-是否命中
-props 不可信
-✅
-参数解构执行时机
-✅
-null vs undefined
-✅
-性能意识
-✅
-children 多态性
-✅
-
+| 考点 | 是否命中 | props 不可信 | ✅ |
+| --- | --- | --- | --- |
+| 参数解构执行时机 | ✅ | null vs undefined | ✅ |
+| 性能意识 | ✅ | children 多态性 | ✅ |
 🧠 面试官终极追问（封神）
 
 那为什么 React 官方文档还大量使用 props 解构？
