--- a/js1/day6_异步编程/面试题1.md
+++ b/js1/day6_异步编程/面试题1.md
@@ -216,13 +216,10 @@ Promise.resolve().then(() => console.log(4))
 console.log(5);
 ```
 
-正确输出顺序：
-3
-1
-5
-2
-4
-
+| 正确输出顺序 | 3 |
+| --- | --- |
+| 1 | 5 |
+| 2 | 4 |
 ---
 
 ## 拆解思路（你面试时要这样说）1. 同步代码先执行：3 → 1 → 5 2. await 后的代码进 微任务 3. Promise.then 也是 微任务 4. 微任务按注册顺序执行：2 → 4
