--- a/js1/day6_异步编程/面试题2.md
+++ b/js1/day6_异步编程/面试题2.md
@@ -212,15 +212,11 @@ Promise.resolve().then(() => console.log(5))
 console.log(6);
 ```
 
-正确输出：
-1
-2
-6
-3
-5
-4
-面试标准拆解 1. 同步：1 → 2 → 6 2. 微任务（注册顺序）：3 → 5 3. 宏任务：4
-
+| 正确输出 | 1 |
+| --- | --- |
+| 2 | 6 |
+| 3 | 5 |
+| 4 | 面试标准拆解 1. 同步：1 → 2 → 6 2. 微任务（注册顺序）：3 → 5 3. 宏任务：4 |
 ---
 
 面试官终局评价级总结
