--- a/js1/day7_事件循环/面试题.md
+++ b/js1/day7_事件循环/面试题.md
@@ -2,78 +2,78 @@
 
 原题回顾
 
+```js
 console.log('A')
 
+```
 async function fn() {
+```js
   console.log('B')
   await null
   console.log('C')
+```
 }
 
 fn()
 
 Promise.resolve().then(() => {
+```js
   console.log('D')
+```
 })
 
 setTimeout(() => {
+```js
   console.log('E')
+```
 }, 0)
 
+```js
 console.log('F')
+```
 🔍 正确输出顺序
 
-A
-B
-F
-C
-D
-E
-
-
-⸻
-
+| A | B |
+| --- | --- |
+| F | C |
+| D | E |
+---
 正确拆解（逐行）
 
 ① 同步阶段（立即执行）
 
+```js
 console.log('A')   // A
+```
 fn()               // 调用 async 函数
+```js
   console.log('B') // B（⚠️ async 函数里 await 之前是同步的）
 console.log('F')   // F
-👉 此时输出：
+```
+- 此时输出：
 A
 B
 F
-
-⸻
-
+---
 ② 微任务阶段
-	•	await null
-👉 等价于 await Promise.resolve(null)
-👉 后续代码进入微任务队列
-	•	Promise.resolve().then(...)
-👉 也是一个微任务
+- await null
+- 等价于 await Promise.resolve(null)
+- 后续代码进入微任务队列
+- Promise.resolve().then(...)
+- 也是一个微任务
 
 ⚠️ 顺序很关键：
-	•	C 对应的微任务 先注册
-	•	D 对应的微任务 后注册
+- C 对应的微任务 先注册
+- D 对应的微任务 后注册
 
 所以微任务顺序是：
 C
 D
-
-
-⸻
-
+---
 ③ 宏任务阶段
 
 setTimeout → E
-
-
-⸻
-
-
+---
 ✅ 任务 2（面试表达）
 
 请你用一句完整的话回答👇
@@ -83,12 +83,9 @@ JS 的事件循环是如何工作的？
 你回答的是：
 
 同步 微任务 宏任务 循环
-
-👉 方向对，但这是“笔记式答案”
-👉 面试官会追问：「能展开说吗？」
-
-⸻
-
+- 方向对，但这是“笔记式答案”
+- 面试官会追问：「能展开说吗？」
+---
 ✅ 面试官「满分版」回答（你直接背这个）
 
 JavaScript 是单线程的，为了处理异步任务，引入了事件循环机制。执行时，JS 会先执行所有同步代码，然后清空微任务队列（如 Promise.then、await 后的代码），再执行宏任务队列（如 setTimeout）。宏任务执行完后，会再次检查微任务队列，如此循环往复，这个过程就叫事件循环。
