--- a/面试题.md
+++ b/面试题.md
@@ -545,3 +545,915 @@ WebSocket 崩溃最常见原因是什么？
 
 🔥 反杀总结
 真正难的不是连上，而是稳定运行。
+
+必杀题 ①（JS 异步 · 分水岭）
+
+题目
+Promise.resolve()
+  .then(() => {
+    console.log(1)
+    return Promise.resolve(2)
+  })
+  .then(console.log)
+
+Promise.resolve()
+  .then(() => {
+    console.log(3)
+  })
+
+  1
+3
+2
+📌 执行过程拆解（面试版）
+
+1️⃣ 同步代码执行完后，开始执行 微任务队列
+
+2️⃣ 第一个 Promise.resolve().then(...)
+	•	执行 then 回调 → 输出 1
+	•	返回 Promise.resolve(2)
+	•	第二个 then 不会立刻执行，而是等这个 Promise resolve
+
+3️⃣ 第二个 Promise.resolve().then(...)
+	•	输出 3
+
+4️⃣ 前面返回的 Promise resolve
+	•	触发 .then(console.log)
+	•	输出 2
+
+⸻
+
+🔍 面试官追问 1
+
+为什么 return Promise.resolve(2) 会“多等一轮”？
+
+✅ 回答要点
+	•	then 的返回值如果是 Promise
+	•	外层 Promise 会 “状态跟随”
+	•	后续 then 会被 重新放入微任务队列
+
+👉 本质是 Promise flatten（扁平化）
+
+⸻
+
+🔍 面试官追问 2
+
+如果改成这样，输出是什么？
+
+.then(() => {
+  console.log(1)
+  return 2
+})
+1
+2
+3
+👉 因为 return 普通值会被 Promise.resolve 包裹，直接进入同一轮微任务
+
+⸻
+
+🌟 加分话术（面试官一听就懂你很深）
+
+Promise 的 then 本质不是回调注册，而是创建一个新的 Promise。
+如果返回值是 Promise，新 Promise 会等待它 settle，
+如果是普通值，则立即 resolve，这就是 then 链条节奏差异的根本原因。
+
+⸻
+
+🧠 再加一刀（杀招）
+
+async/await 其实只是 Promise.then 的语法糖，
+await 后面的代码等价于 then 中的回调，只是写法更接近同步。
+
+必杀题 ②（JS 底层 · 历史级分水岭）
+
+题目
+
+为什么 typeof null === 'object'？
+✅ 标准回答（能过）
+
+在 JavaScript 早期实现中，值的类型是通过“低位标记”来区分的：
+	•	对象：000
+	•	整数：001
+	•	浮点数：010
+	•	字符串：100
+	•	boolean：110
+	•	null 的值是全 0
+
+由于 null 的二进制表示和 object 的类型标记冲突，
+typeof null 被错误地识别为 object。
+
+🔍 面试官追问 1
+
+那为什么不修？
+
+✅ 回答要点
+	•	typeof null === 'object' 已经被大量代码依赖
+	•	修改会导致 Web 生态级别的破坏
+	•	TC39 明确决定 保持兼容
+
+👉 JS 宁愿“脏”，也要 不破坏已有代码
+
+🔍 面试官追问 2
+
+那现在怎么正确判断 null？
+val === null
+
+❌ 不要用 typeof
+❌ 不要用 Object.prototype.toString
+
+⸻
+
+🌟 加分话术（面试官喜欢）
+
+typeof 的设计目标是运行时快速判断基础类型，
+而不是一个精确的类型系统，所以它本身就存在边界问题。
+
+🧠 延伸一刀（非常加分）
+
+这也是为什么后续 ES 引入了：
+
+	•	Array.isArray
+	•	Object.is
+	•	Symbol
+而不是继续扩展 typeof
+
+
+🔥 面试官隐藏杀招
+
+那 typeof function(){} === 'function' 是例外吗？
+
+⭐ 高级回答
+
+是的，function 本质仍然是 object，
+但 JS 引擎对 callable 对象做了特殊标记，
+typeof 单独返回 function，是为了开发者体验。
+
+必杀题 ③（异步并发 · 工程能力分水岭）
+
+题目
+
+实现 Promise 并发控制（限流）
+100 个异步任务，最多同时执行 5 个
+
+
+✅ 标准回答（思路先行）
+
+核心思想只有一句话：
+
+维护一个任务队列 + 当前并发数，完成一个就补一个
+
+
+⸻
+
+✅ 标准实现（面试可写）
+function promisePool(tasks, limit) {
+  let i = 0
+  let running = 0
+  const results = []
+
+  return new Promise((resolve, reject) => {
+    function run() {
+      if (i === tasks.length && running === 0) {
+        resolve(results)
+        return
+      }
+
+      while (running < limit && i < tasks.length) {
+        const cur = i++
+        running++
+
+        Promise.resolve(tasks[cur]())
+          .then(res => {
+            results[cur] = res
+          })
+          .catch(reject)
+          .finally(() => {
+            running--
+            run()
+          })
+      }
+    }
+
+    run()
+  })
+}
+
+
+⸻
+
+🔍 面试官追问 1
+
+为什么要用 while，而不是 if？
+
+✅ 回答
+	•	while 可以在 同一轮事件循环中补满并发
+	•	if 只会补一个，并发爬升慢
+
+👉 这是性能细节，不是语法问题
+
+
+🔍 面试官追问 2
+
+如果其中一个任务 reject 了怎么办？
+
+标准策略（任选说明）
+	1.	立即中断（如请求链依赖）
+	2.	收集错误继续跑
+	3.	重试机制（指数退避）
+
+🌟 加分
+.catch(err => {
+  results[cur] = err
+})
+这个实现有什么问题？
+
+高级回答
+	•	没有超时控制
+	•	没有取消能力
+	•	大量任务可能造成 微任务堆积
+
+🌟 加分话术（工程向）
+
+实际业务中我会结合：
+
+	•	AbortController
+	•	请求优先级
+	•	动态调整 limit
+比如首屏 limit = 2，后台 limit = 8
+
+🧠 再补一刀（秒杀 90% 候选人）
+
+Promise 并发控制本质是 信号量（Semaphore）模型，
+JS 只是用事件循环模拟了这个并发调度。
+必杀题 ④（Vue3 原理 · 框架级分水岭）
+
+题目
+
+Vue3 为什么比 Vue2 快？
+✅ 标准回答（一句话版）
+
+Vue3 的快，核心不是 Proxy，
+而是 编译期做了更多事，运行时做了更少事。
+
+① 编译优化（最核心）
+
+✔️ 静态提升（Static Hoisting）
+	•	静态节点只创建一次
+	•	不参与后续 Diff
+    const _hoisted_1 = /*#__PURE__*/ createElementVNode(...)
+
+⸻
+
+✔️ PatchFlag（精准更新）
+<div :class="cls">{{ msg }}</div>
+→ 编译后知道：
+	•	只有 class 和 text 可能变
+	•	Diff 时 跳过无关属性
+
+⸻
+
+✔️ Block Tree（局部 Diff）
+	•	动态节点才进 Block
+	•	Diff 只在 Block 内进行
+
+👉 Diff 范围直接缩小
+
+
+⸻
+
+② 响应式系统升级（不是唯一原因）
+Vue2
+Vue3
+Object.defineProperty
+Proxy
+初始化递归
+按需代理
+无法监听新增属性
+天然支持
+
+③ 运行时更轻
+	•	更少 watcher
+	•	更少依赖收集
+	•	Tree-shaking 友好
+
+Block Tree 是什么？解决了什么问题？
+
+高级回答
+
+Block Tree 把模板拆分成「静态区 + 动态区」，
+更新时只遍历动态节点，避免全树 Diff。
+
+⸻
+
+🔍 面试官追问 2
+
+Vue3 的 Diff 和 Vue2 有本质区别吗？
+
+正确回答
+
+算法思想类似，
+但 Vue3 通过编译信息 减少了 Diff 的输入规模。
+
+👉 算法没变，数据变少了
+
+⸻
+
+🌟 加分话术（非常重要）
+
+Vue3 的性能提升，本质是：
+把运行时的不确定性，前移到编译期解决
+
+这句话 非常值钱。
+🧠 再补一刀（大厂喜欢）
+
+这也是为什么 Vue3 更依赖模板编译，
+而 JSX 写法在性能确定性上反而更弱。
+
+必杀题 ⑤（Diff 算法 · 设计哲学题）
+
+题目
+
+为什么 Vue / React 的 Diff 只做「同层比较」？
+为什么不做跨层 Diff？
+
+✅ 标准回答（核心版）
+
+因为 DOM 操作成本远高于 JS 计算成本，
+同层 Diff 可以在 可控复杂度内，最大限度减少 DOM 操作。
+
+✅ 深度拆解（面试官想听）
+
+① 跨层 Diff 的问题
+
+假设允许跨层移动节点：
+	•	需要在整棵树中搜索可复用节点
+	•	时间复杂度接近 O(n³)
+	•	即使 JS 算出来了，DOM 移动成本依然极高
+
+👉 算得起，动不起
+
+
+⸻
+
+② 同层 Diff 的优势
+	•	节点结构假设稳定
+	•	只对兄弟节点做最小变更
+	•	可用 key + 双端指针优化
+
+👉 用 结构约定 换 性能确定性
+
+那跨层移动节点怎么办？
+
+正确回答
+
+框架通过 开发者约定 解决：
+
+	•	跨层移动 ≈ 删除 + 新建
+	•	使用 key 明确节点身份
+	•	结构变化交给业务控制
+
+那 React Fiber 不是支持中断吗？能跨层吗？
+
+高级回答
+
+Fiber 优化的是 调度（可中断），
+不是 Diff 规则，
+Diff 依然是同层的。
+
+
+⸻
+
+🌟 加分话术（非常高级）
+
+Diff 算法本质不是“找最优解”，
+而是 在工程可接受的成本下，找到足够好的解。
+
+必杀题 ⑥（浏览器原理 · 架构分水岭）
+
+题目
+
+浏览器是多进程还是多线程？分别有哪些？
+
+✅ 标准回答（一句话）
+
+浏览器是多进程的，每个进程内部是多线程的。
+
+⸻
+
+✅ 关键进程（至少说 4 个）
+
+① 浏览器主进程（Browser Process）
+	•	管理窗口
+	•	地址栏、书签
+	•	网络请求调度
+
+⸻
+
+② 渲染进程（Renderer Process）【最重要】
+	•	HTML / CSS / JS 执行
+	•	Layout / Paint
+	•	每个 tab 基本一个
+
+👉 安全隔离的关键
+
+⸻
+
+③ GPU 进程
+	•	图形加速
+	•	3D / Canvas / CSS 动画
+
+⸻
+
+④ 网络进程
+	•	HTTP / HTTPS
+	•	WebSocket
+	•	缓存
+
+⸻
+
+（加分）
+	•	插件进程
+	•	扩展进程
+
+JS 为什么是单线程？
+
+标准回答
+
+为了避免 DOM 操作冲突。
+如果 JS 多线程同时修改 DOM，
+会引入复杂的锁机制，性能和一致性都会变差。
+
+⸻
+
+🔍 面试官追问 2
+
+那 Web Worker 是什么？
+
+高级回答
+
+Web Worker 是 运行在独立线程的 JS 环境，
+不能直接操作 DOM，
+通过 postMessage 通信。
+
+⸻
+
+🔍 面试官追问 3
+
+那浏览器如何做到“不卡”？
+
+正确回答
+	•	JS 执行在渲染进程的主线程
+	•	UI 渲染和 JS 交替执行
+	•	超时任务被拆分（事件循环）
+
+⸻
+
+🌟 加分话术（很重要）
+
+JS 是单线程的，但浏览器不是。
+卡顿本质不是 JS 慢，而是 主线程被占用。
+
+⸻
+
+🧠 再补一刀（大厂加分）
+
+这也是为什么：
+
+	•	长计算要丢到 Worker
+	•	动画用 CSS / GPU
+	•	计算要分片
+必杀题 ⑦（浏览器渲染 · 性能核心）
+
+题目
+
+什么是重排（Reflow）和重绘（Repaint）？有什么区别？
+
+	•	重排（Reflow）：
+DOM 几何结构发生变化（位置、尺寸），
+浏览器需要重新计算布局树
+	•	重绘（Repaint）：
+元素样式变化但不影响布局（颜色、背景），
+只重新绘制像素
+
+👉 重排一定引发重绘，重绘不一定重排
+
+⸻
+
+✅ 哪些操作会触发 Reflow（必背）
+
+📐 几何相关
+	•	width / height
+	•	padding / margin
+	•	top / left
+	•	display
+
+📄 DOM 结构
+	•	添加 / 删除节点
+	•	改变节点层级
+
+📊 查询布局信息（隐藏杀招）
+offsetWidth
+clientHeight
+getComputedStyle()
+👉 读也可能触发重排
+为什么“读属性”也会触发重排？
+
+高级回答
+
+浏览器会 延迟布局计算，
+当你读取布局信息时，
+它必须先强制 flush 布局队列，
+以保证数据准确。
+
+⸻
+
+🔍 面试官追问 2
+
+如何避免频繁重排？
+
+标准策略
+	•	批量 DOM 操作（DocumentFragment）
+	•	读写分离
+	•	使用 class 切换样式
+	•	display: none 后操作
+
+🌟 加分话术（杀招）
+
+transform / opacity 只触发 合成层更新，
+不参与 Layout 和 Paint，
+所以动画更流畅。
+
+⸻
+
+🧠 再补一刀（工程级）
+
+性能优化的核心不是“少写 DOM”，
+必杀题 ⑧（浏览器 · 网络 · 渲染全链路）
+
+题目
+
+从输入 URL 到页面渲染完成，浏览器经历了哪些关键过程？
+
+⸻
+
+✅ 标准回答（清晰版）
+
+① URL 解析
+	•	补全协议
+	•	判断是搜索还是地址
+
+⸻
+
+② DNS 解析
+	•	浏览器缓存
+	•	系统缓存
+	•	本地 hosts
+	•	DNS 服务器
+
+⸻
+
+③ 建立连接
+	•	TCP 三次握手
+	•	HTTPS：TLS 握手（证书校验、密钥协商）
+
+⸻
+
+④ 发送 HTTP 请求
+	•	请求行 / 头 / 体
+
+⸻
+
+⑤ 服务器处理 & 返回响应
+	•	状态码
+	•	响应头
+	•	HTML 数据流
+
+⸻
+
+⑥ 浏览器解析 HTML（重点）
+	•	构建 DOM Tree
+	•	解析 CSS → CSSOM
+	•	DOM + CSSOM → Render Tree
+
+⚠️ CSS 会阻塞渲染
+
+⸻
+
+⑦ 布局（Layout） & 绘制（Paint）
+	•	计算位置
+	•	绘制像素
+
+⸻
+
+⑧ 合成（Composite）
+	•	GPU 合成图层
+	•	显示到屏幕
+
+⸻
+
+🔍 面试官追问 1
+
+JS 会阻塞页面渲染吗？
+
+正确回答
+	•	默认会
+	•	因为 JS 可能操作 DOM / CSSOM
+	•	可通过：
+	•	defer
+	•	async
+	•	放底部
+
+⸻
+
+🔍 面试官追问 2
+
+CSS 为什么会阻塞渲染？
+
+高级回答
+
+浏览器必须拿到完整 CSSOM，
+才能确定元素最终样式，
+否则会出现样式闪烁。
+
+⸻
+
+🔍 面试官追问 3
+
+DOMContentLoaded 和 load 区别？
+
+标准回答
+
+事件
+触发时机
+DOMContentLoaded
+DOM 构建完成
+load
+所有资源加载完成
+
+🌟 加分话术（非常重要）
+
+首屏性能优化，本质就是：
+让关键路径更短，让阻塞更少
+
+⸻
+
+🧠 再补一刀（架构级）
+
+HTTP/2 多路复用、资源优先级、预加载，
+都是在优化这条关键渲染路径。
+
+必杀题 ⑨（前端性能优化 · 工程实战）
+
+题目
+
+你做过哪些前端性能优化？
+
+✅ 标准回答（分层结构化）
+
+一、网络层优化
+
+✔️ 减少请求数量
+	•	资源合并
+	•	HTTP/2 多路复用
+
+✔️ 减少请求体积
+	•	gzip / brotli
+	•	图片 WebP / AVIF
+
+✔️ 缓存策略
+	•	强缓存（Cache-Control）
+	•	协商缓存（ETag）
+
+⸻
+
+二、渲染层优化（核心）
+
+✔️ 关键渲染路径优化
+	•	CSS 放 head
+	•	JS defer / async
+	•	关键 CSS 内联
+
+✔️ 避免重排
+	•	transform / opacity
+	•	批量 DOM 操作
+
+✔️ 虚拟列表
+	•	只渲染可视区
+
+⸻
+
+三、JS 执行层优化
+
+✔️ 减少主线程阻塞
+	•	Web Worker
+	•	分片计算（requestIdleCallback）
+
+✔️ 节流 / 防抖
+	•	高频事件
+	•	WebSocket 推送
+
+⸻
+
+🔍 面试官追问 1
+
+你是怎么定位性能问题的？
+
+标准回答
+	•	Chrome DevTools
+	•	Network
+	•	Performance
+	•	Lighthouse
+	•	打点监控
+	•	FP / FCP / LCP
+	•	TTI
+
+⸻
+
+🔍 面试官追问 2
+
+你优化后效果如何？
+
+高级回答（一定要量化）
+
+首屏 FCP 从 2.8s 降到 1.4s，
+列表滚动帧率从 30fps 提升到接近 60fps。
+
+⸻
+
+🌟 加分话术（非常重要）
+
+性能优化不是“全都做”，
+而是 先找到瓶颈，再针对性优化。
+
+⸻
+
+🧠 再补一刀（大厂级）
+
+实际项目中，我更关注 用户感知性能，
+而不仅是技术指标。
+
+
+⸻
+
+必杀题 ⑩（前端不卡死 · 高并发场景）
+
+题目
+
+前端如何防止页面“卡死”？
+高频 WebSocket 推送、复杂图表、大量计算怎么办？
+
+⸻
+
+❌ 常见错误回答
+	•	用 setTimeout
+	•	防抖 / 节流
+	•	lazy load
+
+👉 太浅，没体现工程能力
+
+⸻
+
+✅ 标准回答（分层思路）
+
+① 主线程隔离
+
+✔️ Web Worker
+	•	把 计算密集型逻辑移到 Worker
+	•	不阻塞 UI 渲染
+	•	Worker → postMessage 传回结果
+
+✔️ requestIdleCallback / setTimeout 分片计算
+	•	大数组 / 大量循环拆成小块
+	•	每次只占用少量主线程时间
+
+⸻
+
+② 渲染优化
+
+✔️ 虚拟列表 / 虚拟滚动
+	•	只渲染可视区 DOM
+	•	大量节点也不卡
+
+✔️ 图表优化
+	•	Canvas / WebGL
+	•	避免频繁更新 DOM
+	•	动画使用 GPU（transform / opacity）
+
+⸻
+
+③ 数据节流与优先级
+
+✔️ WebSocket 推送
+	•	防抖 / 节流 / 合并更新
+	•	核心业务优先，非核心可以丢弃或延迟
+
+✔️ 请求分片
+	•	大量请求按重要级别分批更新 UI
+	•	控制并发数（Semaphore / Promise Pool）
+
+⸻
+
+④ 性能监控
+	•	FPS / JS 执行时间
+	•	首屏渲染时间
+	•	避免微小卡顿累积成体验差
+
+⸻
+
+🔍 面试官追问 1
+
+为什么 Worker 不能直接操作 DOM？
+
+✅ 回答
+	•	Worker 在独立线程
+	•	没有 DOM 访问权限
+	•	UI 数据通过 postMessage 传回主线程处理
+
+⸻
+
+🔍 面试官追问 2
+
+图表频繁更新怎么办？
+
+高级回答
+	•	Canvas 层 vs DOM 层分离
+	•	动画使用 requestAnimationFrame
+	•	只更新变化部分（增量渲染）
+
+⸻
+
+🌟 加分话术（杀招）
+
+页面不卡不是减少数据量，而是 控制主线程占用 + 合理分发任务 + 渲染优化。
+高并发场景核心是 “谁先执行、谁延迟、谁丢弃”。
+
+⸻
+
+🧠 再补一刀（大厂加分）
+
+实际项目中，我会结合：
+
+	•	数据分层（核心业务 vs 辅助业务）
+	•	并发控制
+	•	虚拟化渲染
+	•	Worker 分片计算
+
+这样即使 WebSocket 100ms 推送一次，也不卡。
+
+6️⃣ Vue Router
+
+题目：路由守卫有哪些类型？
+答案：
+	•	全局守卫：beforeEach / afterEach
+	•	路由独享守卫：beforeEnter
+	•	组件内守卫：beforeRouteEnter / beforeRouteUpdate / beforeRouteLeave
+追问：权限控制如何实现？
+	•	利用 meta 字段 + 路由守卫判断 token / 角色。
+
+
+7️⃣ Vue 性能优化
+
+题目：Vue 页面渲染慢，你会怎么优化？
+答案：
+	1.	使用 v-if/v-show 控制渲染
+	2.	computed 缓存复杂计算
+	3.	异步组件 / 路由懒加载
+	4.	v-once、key 优化列表
+	5.	使用虚拟列表处理长列表
+8️⃣ 事件修饰符
+
+题目：Vue 事件修饰符 .stop, .prevent 的作用？
+答案：
+	•	.stop 阻止事件冒泡
+	•	.prevent 阻止默认事件
+追问：.self 有什么用？
+	•	只在事件源本身触发，不包括子元素。
+
+1️⃣6️⃣ Vuex / Pinia
+
+题目：Vuex 与 Pinia 区别？
+答案：
+	•	Pinia API 更简单，支持模块自动拆分
+	•	Vuex 需要 mutations/action
+	•	Pinia 支持 TS 类型推导
+
+
+⸻
+
+4️⃣ 组件通信
+
+题目：Vue 组件通信方式？
+
+标准答案：
+	1.	父传子：props
+	2.	子传父：$emit
+	3.	非父子：EventBus / mitt / Pinia / Vuex
+	4.	插槽：父控子渲染
+
+追问：Pinia 优势？
+	•	TS 类型推导
+	•	状态集中管理
+	•	响应式可跨组件使用
+
+加分话术：
+	•	提到 store.subscribe, store.watch 实现副作用
+    
